--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <br>
               <em>37th Conference on Uncertainty in Artificial Intelligence</em> (UAI 2021)
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/finclass-uai">[Code]</a>
             </p>
             </td>
           </tr>
@@ -98,7 +98,7 @@
               <br>
               <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021), [AR=13.9%]
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/tec-ijcai">[Code]</a>
             </p>
             </td>
           </tr>
@@ -117,7 +117,7 @@
               <br>
               <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021)
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/hyperbolic-tlstm-sigir">[Code]</a>
             </p>
             </td>
           </tr>
@@ -136,14 +136,14 @@
               <br>
               <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (NAACL 2021)
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/profit-naacl">[Code]</a>
             </p>
             </td>
           </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
-              <img src="images/uai.png" alt="www21" height="160">
+              <img src="images/www.png" alt="www21" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://dl.acm.org/doi/fullHtml/10.1145/3442381.3450095">
@@ -155,7 +155,7 @@
               <br>
               <em>30th The Web Conference</em>, (WWW 2021)
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/hyper-stockgat-www">[Code]</a>
             </p>
             </td>
           </tr>
@@ -173,7 +173,7 @@
               <br>
               <em>European Chapter of the Association for Computational Linguistics</em>, (EACL 2021), [AR=24%]
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/fast-eacl">[Code]</a>
             </p>
             </td>
           </tr>
@@ -191,7 +191,7 @@
               <br>
               <em>AAAI Conference on Artificial Intelligence</em>, (AAAI 2021), [AR=21%]
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/sthan-sr-aaai">[Code]</a>
             </p>
             </td>
           </tr>
@@ -209,7 +209,7 @@
               <br>
               <em>International Conference on Computational Linguistics</em>, (COLING 2020), [AR=21%]
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/gpols-coling">[Code]</a>
               <br>
               <font color="red"><strong>(Outstanding Paper Award)</strong></font>
             </p>
@@ -229,7 +229,7 @@
               <br>
               <em>Empirical Methods in Natural Language Processing</em>,  (Proceedings of EMNLP 2020), [AR=24.6%]
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/man-sf-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -247,7 +247,7 @@
               <br>
               <em>IEEE International Conference on Data Mining</em>, (ICDM 2020), [AR=9.7%]
               <br>
-              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
+              <a href="https://github.com/midas-research/sthgcn-icdm">[Code]</a>
             </p>
             </td>
           </tr>
@@ -263,7 +263,7 @@
           </tr>
           <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
-            Program Committee Member, WWWW, 2021 <br>
+            Program Committee Member, WWW, 2021 <br>
             Reviewer for WSDM, EMNLP, ACL, AISTATS, CIKM, NAACL, ASONAM
           </td>
           </tr>
