--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=YiXA97YAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/shivamag99/">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://github.com/shivamag125/">Github</a>
+                <a href="https://github.com/shivamag125/">Github</a> 
+                &nbsp/&nbsp
+                <a href="https://www.semanticscholar.org/author/Shivam-Agarwal/1923351">Semantic Scholar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%;vertical-align:middle;text-align:center">
