--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <papertitle>TEC: A Time Evolving Contextual Graph Model for Speaker State Analysis in Political Debates</papertitle>
               </a>
               <br><p>
-              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021), [AR=13.9%]
               <br>
@@ -115,7 +115,7 @@
             </a>    
               <br>
               <p>
-              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021)
               <br>
@@ -153,7 +153,7 @@
               </a>
               <br>
               <p>
-              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>30th The Web Conference</em>, (WWW 2021)
               <br>
@@ -189,7 +189,7 @@
                 <papertitle>Stock Selection via Spatiotemporal Hypergraph Attention Network: A Learning to Rank Approach</papertitle>
               </a>
               <br><p>
-              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Tyler Derr, Rajiv Ratn Shah
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Tyler Derr, Rajiv Ratn Shah
               <br>
               <em>AAAI Conference on Artificial Intelligence</em>, (AAAI 2021), [AR=21%]
               <br>
@@ -207,7 +207,7 @@
                 <papertitle>GPolS: A Contextual Graph-Based Language Model for Analyzing Parliamentary Debates and Political Cohesion</papertitle>
               </a>
               <br><p>
-             Ramit Sawhney, Arnav Wadhwa,  <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
+             Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
               <em>International Conference on Computational Linguistics</em>, (COLING 2020), [AR=21%]
               <br>
@@ -227,7 +227,7 @@
                 <papertitle>Deep Attentive Learning for Stock Movement Prediction From Social Media Text and Company Correlations</papertitle>
               </a>
               <br><p>
-              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>Empirical Methods in Natural Language Processing</em>,  (Proceedings of EMNLP 2020), [AR=24.6%]
               <br>
