--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/aistats2022.png" alt="aistats22" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Orthogonally Constrained Multi-Manifold Enriching for Learning Representations of Directed Networks</papertitle>
+              <br><p>
+              Ramit Sawhney*, <strong>Shivam Agarwal*</strong>, Atula Tejaswi, Kapil Pathak
+              <br>
+              <em>The 25th International Conference on Artificial Intelligence and Statistics</em> (AISTATS 2022)
+              <br>
+              <!-- <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a> -->
+            </p>
+            </td>
+          </tr>
+
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/emnlp2021.png" alt="emnlp21" height="160">
