--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/emnlp2021.png" alt="emnlp21" height="160">
             </td>
-            <td width="75%" valign="middle"><a href="https://www.cc.gatech.edu/~dyang888/docs/emnlp21_hypermixup.pdf">
+            <td width="75%" valign="middle"><a href="https://aclanthology.org/2021.emnlp-main.776/">
                 <papertitle>HypMix: Hyperbolic Interpolative Data Augmentation</papertitle></a>
               <br><p>
               Ramit Sawhney, Megh Thakkar, <strong>Shivam Agarwal</strong>, Di Jin, Diyi Yang, Lucie Flek
