--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/acl2022.png" alt="acl22" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>HYPHEN: Hyperbolic Hawkes Attention For Text Streams</papertitle>
+              <br><p>
+              <strong>Shivam Agarwal</strong>, Ramit Sawhney, Sanchit Ahuja, Ritesh Soun, Sudheer Chava
+              <br>
+              <em>60th Annual Meeting of the Association for Computational Linguistics</em> (ACL 2022)
+              <br>
+              <!-- <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a> -->
+            </p>
+            </td>
+          </tr>
+
+
+
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
