--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in natural machine learning, NLP, geometric deep learning, and reinforcement learning. I have presented my work in these areas in several top tier conferences including EMNLP, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. 
+                I'm interested in natural machine learning, NLP, geometric deep learning, and reinforcement learning. I have presented my work in these areas in several top tier conferences including ACL, EMNLP, AISTATS, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. 
               </p>
             </td>
           </tr>
