--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/naacl2022.png" alt="naacl22" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Cryptocurrency Bubble Detection: A New Stock Market Dataset, Financial Task & Hyperbolic Models</papertitle>
+              <br><p>
+              Ramit Sawhney*, <strong>Shivam Agarwal*</strong>, Vivek Mittal, Paolo Rosso, Vikram Nanda, Sudheer Chava
+              <br>
+              <em>2022 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em> (NAACL 2022)
+              <br>
+              <!-- <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a> -->
+            </p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/acl2022.png" alt="acl22" height="160">
@@ -78,7 +95,7 @@
               <img src="images/aistats2022.png" alt="aistats22" height="160">
             </td>
             <td width="75%" valign="middle">
-                <papertitle>Orthogonally Constrained Multi-Manifold Enriching for Learning Representations of Directed Networks</papertitle>
+                <papertitle>Orthogonal Multi-Manifold Enriching of Directed Networks</papertitle>
               <br><p>
               Ramit Sawhney*, <strong>Shivam Agarwal*</strong>, Atula Tejaswi, Kapil Pathak
               <br>
