--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/naacl2022.png" alt="naacl22" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle>Cryptocurrency Bubble Detection: A New Stock Market Dataset, Financial Task & Hyperbolic Models</papertitle>
+            <td width="75%" valign="middle"><a href="https://arxiv.org/abs/2206.06320">
+                <papertitle>Cryptocurrency Bubble Detection: A New Stock Market Dataset, Financial Task & Hyperbolic Models</papertitle></a>
               <br><p>
               Ramit Sawhney*, <strong>Shivam Agarwal*</strong>, Vivek Mittal, Paolo Rosso, Vikram Nanda, Sudheer Chava
               <br>
               <em>2022 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em> (NAACL 2022)
               <br>
-              <!-- <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a> -->
+              <a href="https://github.com/gtfintechlab/CryptoBubbles-NAACL">[Code]</a>
             </p>
             </td>
           </tr>
@@ -75,14 +75,14 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/acl2022.png" alt="acl22" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle>HYPHEN: Hyperbolic Hawkes Attention For Text Streams</papertitle>
+            <td width="75%" valign="middle"><a href="https://aclanthology.org/2022.acl-short.69/">
+                <papertitle>HYPHEN: Hyperbolic Hawkes Attention For Text Streams</papertitle></a>
               <br><p>
               <strong>Shivam Agarwal</strong>, Ramit Sawhney, Sanchit Ahuja, Ritesh Soun, Sudheer Chava
               <br>
               <em>60th Annual Meeting of the Association for Computational Linguistics</em> (ACL 2022)
               <br>
-              <!-- <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a> -->
+              <a href="https://github.com/gtfintechlab/hyphen-acl">[Code]</a>
             </p>
             </td>
           </tr>
@@ -94,14 +94,14 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/aistats2022.png" alt="aistats22" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle>Orthogonal Multi-Manifold Enriching of Directed Networks</papertitle>
+            <td width="75%" valign="middle"><a href="https://proceedings.mlr.press/v151/sawhney22a.html">
+                <papertitle>Orthogonal Multi-Manifold Enriching of Directed Networks</papertitle></a>
               <br><p>
               Ramit Sawhney*, <strong>Shivam Agarwal*</strong>, Atula Tejaswi, Kapil Pathak
               <br>
               <em>The 25th International Conference on Artificial Intelligence and Statistics</em> (AISTATS 2022)
               <br>
-              <!-- <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a> -->
+              <a href="https://github.com/atutej/MRIL">[Code]</a>
             </p>
             </td>
           </tr>
