--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
               <p style="text-align:center">
                 <name>Shivam Agarwal</name>
               </p>
-              <p>I am an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>, where I work on machine learning, natural language processing, and graph learning. I graduated at the top of my class from <a href="https://manipal.edu/mit.html">MIT</a>, India in Bachelors of Electronics and Communication Engineering in 2021, and have had the privilege of learning from my experiences and mentors at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a>, <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">Midas-IIITD</a>, <a href="https://www.vanderbilt.edu/">Vanderbilt University</a>, <a href="https://caisa-lab.github.io/">Philipps Universität Marburg University</a> and, <a href="https://projectmanas.in/">Project Manas</a>. 
+              <p> I am a master's student at University of Illinois at Urbana-Champaign (UIUC) where I study CS and AI. 
+                I am also a research assitant in Prof. Jiawei Han's Data Mining Research Group (DMG) at UIUC. 
+                Previously, I was an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>.
+                I obtained my bachelors degree in ECE from <a href="https://manipal.edu/mit.html">Manipal Institute of Technology, India</a> where I graduated at the top of my class.  
               </p>
               <p>
+              I am especially passionate about machine learning, natural language processing, and graph-based deep learning. I have been fortunate to contribute to a wide range of research directions, including spatio-temporal information processing, reinforcement learning, quantitative finance, financial NLP and computational social sciences. I would be happy to discuss any project idea at the intersection of the above areas; feel free to <a href="mailto:shivamag99@gmail.com">reach out</a> if you are interested!
+              </p>   
+<!-- 
+                I am an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>, where I work on machine learning, natural language processing, and graph learning. I graduated at the top of my class from <a href="https://manipal.edu/mit.html">MIT</a>, India in Bachelors of Electronics and Communication Engineering in 2021, and have had the privilege of learning from my experiences and mentors at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a>, <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">Midas-IIITD</a>, <a href="https://www.vanderbilt.edu/">Vanderbilt University</a>, <a href="https://caisa-lab.github.io/">Philipps Universität Marburg University</a> and, <a href="https://projectmanas.in/">Project Manas</a>. 
+              </p> -->
+              <p><!-- 
                 Throughout my research career, I have been fortunate to contribute to a wide range of research directions, including machine learning, natural language processing, graph learning, spatio-temporal information processing, reinforcement learning, quantitative finance and computational social sciences. I would be happy to discuss any project idea at the intersection of the above areas; feel free to <a href="mailto:shivamag99@gmail.com">reach out</a> if you are interested!
-              </p>
+              </p -->>
               <p style="text-align:center">
                 <a href="mailto:shivamag99@gmail.com">Email</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
@@ -47,7 +56,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in natural machine learning, NLP, geometric deep learning, and reinforcement learning. I have presented my work in these areas in several top tier conferences including ACL, EMNLP, AISTATS, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. 
+                I'm interested in natural machine learning, and natural language processing. I have presented my work in these areas in several top tier conferences including ACL, EMNLP, AISTATS, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. Recently, I am working on developing self-supervised, unsupervised and weakly-supervised (i.e., leveraging minimal human supervision) text mining techniques for organizing and exploring text data.
               </p>
             </td>
           </tr>
