--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               <p style="text-align:center">
                 <name>Shivam Agarwal</name>
               </p>
-              <p> I am a master's student at University of Illinois at Urbana-Champaign (UIUC) where I study CS and AI. 
-                I am also a research assitant in Prof. Jiawei Han's Data Mining Research Group (DMG) at UIUC. 
+              <p> I am a master's student at <a href="https://cs.illinois.edu/">University of Illinois at Urbana-Champaign (UIUC)</a> where I study CS and AI. 
+                I am also a research assitant in <a href="http://hanj.cs.illinois.edu/">Prof. Jiawei Han's</a> <a href="http://dm1.cs.uiuc.edu/">Data Mining Research Group (DMG)</a> at UIUC. 
                 Previously, I was an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>.
                 I obtained my bachelors degree in ECE from <a href="https://manipal.edu/mit.html">Manipal Institute of Technology, India</a> where I graduated at the top of my class.  
               </p>
