--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/icdm2022.png" alt="icdm22" height="160">
+            </td>
+            <td width="75%" valign="middle"><a href="https://arxiv.org/abs/2206.06320">
+                <papertitle>THINK: Temporal Hypergraph Hyperbolic Network</papertitle></a>
+              <br><p>
+              <strong>Shivam Agarwal*</strong>, Ramit Sawhney, Megh Thakkar, Preslav Nakov, Jiawei Han, Tyler Derr
+              <br>
+              <em>IEEE International Conference on Data Mining</em> (ICDM 2022)
+              <br>
+              <!-- <a href="https://github.com/gtfintechlab/CryptoBubbles-NAACL">[Code]</a> -->
+            </p>
+            </td>
+          </tr>
+
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
