--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/icdm2022.png" alt="icdm22" height="160">
             </td>
-            <td width="75%" valign="middle"><a href="https://arxiv.org/abs/2206.06320">
-                <papertitle>THINK: Temporal Hypergraph Hyperbolic Network</papertitle></a>
+            <td width="75%" valign="middle">
+                <papertitle>THINK: Temporal Hypergraph Hyperbolic Network</papertitle>
               <br><p>
               <strong>Shivam Agarwal*</strong>, Ramit Sawhney, Megh Thakkar, Preslav Nakov, Jiawei Han, Tyler Derr
               <br>
