--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <td width="75%" valign="middle">
                 <papertitle>THINK: Temporal Hypergraph Hyperbolic Network</papertitle>
               <br><p>
-              <strong>Shivam Agarwal*</strong>, Ramit Sawhney, Megh Thakkar, Preslav Nakov, Jiawei Han, Tyler Derr
+              <strong>Shivam Agarwal*</strong>, Ramit Sawhney*, Megh Thakkar, Preslav Nakov, Jiawei Han, Tyler Derr
               <br>
               <em>IEEE International Conference on Data Mining</em> (ICDM 2022)
               <br>
