--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <br>
               <em>IEEE International Conference on Data Mining</em> (ICDM 2022)
               <br>
-              <!-- <a href="https://github.com/gtfintechlab/CryptoBubbles-NAACL">[Code]</a> -->
+              <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a>
             </p>
             </td>
           </tr>
