--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
               <p style="text-align:center">
                 <name>Shivam Agarwal</name>
               </p>
-              <p> I am a master's student at <a href="https://cs.illinois.edu/">University of Illinois at Urbana-Champaign (UIUC)</a> where I study CS and AI. 
+              <p> I am a graduate student at <a href="https://cs.illinois.edu/">University of Illinois at Urbana-Champaign (UIUC)</a> where I study CS and AI. 
                 I am also a research assitant in <a href="http://hanj.cs.illinois.edu/">Prof. Jiawei Han's</a> <a href="http://dm1.cs.uiuc.edu/">Data Mining Research Group (DMG)</a> at UIUC. 
                 Previously, I was an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>.
                 I obtained my bachelors degree in ECE from <a href="https://manipal.edu/mit.html">Manipal Institute of Technology, India</a> where I graduated at the top of my class.  
               </p>
               <p>
-              I am especially passionate about machine learning, natural language processing, and graph-based deep learning. I have been fortunate to contribute to a wide range of research directions, including spatio-temporal information processing, reinforcement learning, quantitative finance, financial NLP and computational social sciences. I would be happy to discuss any project idea at the intersection of the above areas; feel free to <a href="mailto:shivamag99@gmail.com">reach out</a> if you are interested!
+              I am especially passionate about machine learning, natural language processing, and graph-based deep learning. I have been fortunate to contribute to a wide range of research directions, including text mining, information extraction, text representation learning, spatio-temporal information processing, reinforcement learning, quantitative finance, and computational social sciences. I would be happy to discuss any project idea at the intersection of the above areas; feel free to <a href="mailto:shivamag99@gmail.com">reach out</a> if you are interested!
               </p>   
 <!-- 
                 I am an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>, where I work on machine learning, natural language processing, and graph learning. I graduated at the top of my class from <a href="https://manipal.edu/mit.html">MIT</a>, India in Bachelors of Electronics and Communication Engineering in 2021, and have had the privilege of learning from my experiences and mentors at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a>, <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">Midas-IIITD</a>, <a href="https://www.vanderbilt.edu/">Vanderbilt University</a>, <a href="https://caisa-lab.github.io/">Philipps Universität Marburg University</a> and, <a href="https://projectmanas.in/">Project Manas</a>. 
@@ -95,6 +95,27 @@
             </p>
             </td>
           </tr>
+
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/sigir2022.png" alt="sigir22" height="160">
+            </td>
+            <td width="75%" valign="middle"><a href="https://dl.acm.org/doi/abs/10.1145/3477495.3532068">
+                <papertitle>Towards suicide ideation detection through online conversational context</papertitle></a>
+              <br><p>
+               Ramit Sawhney*, <strong>Shivam Agarwal*</strong>, Atula Tejaswi Neerkaje, Nikolaos Aletras, Preslav Nakov, Lucie Flek
+              <br>
+              <em>The 45th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2022)
+              <br>
+              <a href="https://github.com/caisa-lab/hcn-sigir">[Code]</a>
+            </p>
+            </td>
+          </tr>
+
+
+
+
+
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
