--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@
       </td>
     </tr>
   </table>
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=NWNY6zZdsTX45kjG2e2pXXX-rmHPNa11U91bNqXgr8w"></script>
+
 </body>
 
 </html>
