--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <img src="images/icdm2022.png" alt="icdm22" height="160">
             </td>
             <td width="75%" valign="middle">
-                <papertitle>THINK: Temporal Hypergraph Hyperbolic Network</papertitle>
+                <a href="https://ieeexplore.ieee.org/abstract/document/10027762"><papertitle>THINK: Temporal Hypergraph Hyperbolic Network</papertitle></a>
               <br><p>
               <strong>Shivam Agarwal*</strong>, Ramit Sawhney*, Megh Thakkar, Preslav Nakov, Jiawei Han, Tyler Derr
               <br>
