--- a/index.html
+++ b/index.html
@@ -62,6 +62,74 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/acl23_2.png" alt="acl23" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle></papertitle>
+              <br><p>
+                Nishant Balepur*, <strong>Shivam Agarwal*</strong>, Karthik Ramanan, Diyi Yang, Jiawei Han
+              <br>
+              <em>Fingings of the 61st Annual Meeting of the Association for Computational Linguistics</em> (ACL 2023)
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/acl23_1.png" alt="acl23" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Text-Augmented Open Knowledge Graph Completion via Pre-Trained Language Models</papertitle>
+              <br><p>
+                Pengcheng Jiang, <strong>Shivam Agarwal</strong>, Bowen Jin, Xuan Wang, Jiawei Han
+              <br>
+              <em>Findings of the 61st Annual Meeting of the Association for Computational Linguistics</em> (ACL 2023)
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/sigir23.png" alt="sigir23" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>Learning Through Interpolative Augmentation of Dynamic Curvature Spaces</papertitle>
+              <br><p>
+                Parth Chhabra, Atula Tejaswi Neerkaje, <strong>Shivam Agarwal</strong>, Ramit Sawhney, Megh Thakkar, Preslav Nakov, Sudheer Chava
+              <br>
+              <em>The 45th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2023)
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/icassp23.png" alt="icassp23" height="160">
+            </td>
+            <td width="75%" valign="middle">
+                <papertitle>HyperSteg: Hyperbolic Learning For Deep Steganography</papertitle>
+              <br><p>
+              <strong>Shivam Agarwal</strong>, Ritesh Soun, Rahul Shivani, Vishnu Varanasi, Navroop Gill, Ramit Sawhney
+              <br>
+              <em>2023 IEEE International Conference on Acoustics, Speech, and Signal Processing</em> (ICASSP 2023)
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
+
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
