--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/acl23_2.png" alt="acl23" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle></papertitle>
+            <td width="75%" valign="middle"><a href="https://aclanthology.org/2023.findings-acl.14/">
+                <papertitle>DynaMiTE: Discovering Explosive Topic Evolutions with User Guidance</papertitle></a>
               <br><p>
                 Nishant Balepur*, <strong>Shivam Agarwal*</strong>, Karthik Ramanan, Diyi Yang, Jiawei Han
               <br>
@@ -83,8 +83,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/acl23_1.png" alt="acl23" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle>Text-Augmented Open Knowledge Graph Completion via Pre-Trained Language Models</papertitle>
+            <td width="75%" valign="middle"><a href="https://aclanthology.org/2023.findings-acl.709/">
+                <papertitle>Text-Augmented Open Knowledge Graph Completion via Pre-Trained Language Models</papertitle></a>
               <br><p>
                 Pengcheng Jiang, <strong>Shivam Agarwal</strong>, Bowen Jin, Xuan Wang, Jiawei Han
               <br>
@@ -100,8 +100,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/sigir23.png" alt="sigir23" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle>Learning Through Interpolative Augmentation of Dynamic Curvature Spaces</papertitle>
+            <td width="75%" valign="middle"><a href="https://dl.acm.org/doi/10.1145/3539618.3592008">
+                <papertitle>Learning Through Interpolative Augmentation of Dynamic Curvature Spaces</papertitle></a>
               <br><p>
                 Parth Chhabra, Atula Tejaswi Neerkaje, <strong>Shivam Agarwal</strong>, Ramit Sawhney, Megh Thakkar, Preslav Nakov, Sudheer Chava
               <br>
@@ -117,8 +117,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/icassp23.png" alt="icassp23" height="160">
             </td>
-            <td width="75%" valign="middle">
-                <papertitle>HyperSteg: Hyperbolic Learning For Deep Steganography</papertitle>
+            <td width="75%" valign="middle"><a href="https://ieeexplore.ieee.org/document/10096162">
+                <papertitle>HyperSteg: Hyperbolic Learning For Deep Steganography</papertitle></a>
               <br><p>
               <strong>Shivam Agarwal</strong>, Ritesh Soun, Rahul Shivani, Vishnu Varanasi, Navroop Gill, Ramit Sawhney
               <br>
