--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <p> I am a <a href="https://www.businesswire.com/news/home/20230919861208/en/Siebel-Scholars-Foundation-Announces-Class-of-2024">Siebel Scholar</a> and a graduate student at <a href="https://cs.illinois.edu/">University of Illinois at Urbana-Champaign (UIUC)</a> where I study CS and AI. 
                 I am advised by <a href="http://hanj.cs.illinois.edu/">Prof. Jiawei Han's</a> and <a href="https://haopeng-nlp.github.io/"> Prof. Hao Peng </a>. 
                 Previously, I was an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>.
-                I obtained my bachelors degree in ECE from <a href="https://manipal.edu/mit.html">Manipal Institute of Technology, India</a> where I graduated at the top of my class.  
+                I obtained my bachelors degree in ECE from <a href="https://manipal.edu/mit.html">Manipal Institute of Technology, India</a>.  
               </p>
               <p>
               I am especially passionate about machine learning, natural language processing, and graph-based deep learning. I have been fortunate to contribute to a wide range of research directions, including large language models, text mining, text representation learning, spatio-temporal information processing, reinforcement learning, quantitative finance, and computational social sciences. I would be happy to discuss any project idea at the intersection of the above areas; feel free to <a href="mailto:shivamag99@gmail.com">reach out</a> if you are interested!
@@ -56,7 +56,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in natural machine learning, and natural language processing. I have presented my work in these areas in several top tier conferences including ACL, EMNLP, AISTATS, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. Recently, I am working on developing self-supervised, unsupervised and weakly-supervised (i.e., leveraging minimal human supervision) text mining techniques for organizing and exploring text data.
+                I'm interested in natural machine learning, and natural language processing. Recently, I have been working on making language AI more efficient and accessible. I am evaluating and improving large language models' reasoning capabilities, factuality, and trustworthiness.
               </p>
             </td>
           </tr>
