--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </p>
               <p> I am a <a href="https://www.businesswire.com/news/home/20230919861208/en/Siebel-Scholars-Foundation-Announces-Class-of-2024">Siebel Scholar</a> and a graduate student at <a href="https://cs.illinois.edu/">University of Illinois at Urbana-Champaign (UIUC)</a> where I study CS and AI. 
                 I am advised by <a href="http://hanj.cs.illinois.edu/">Prof. Jiawei Han's</a> and <a href="https://haopeng-nlp.github.io/"> Prof. Hao Peng </a>. 
-                Previously, I was an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a researcher at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>.
+                Previously, I was an Engineer at <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a> and a research intern at <a href="http://midas.iiitd.edu.in/team/Shivam-Agarwal.html">IIIT-Delhi</a> and <a href="https://nds-vu.github.io/people/">Vanderbilt University</a>.
                 I obtained my bachelors degree in ECE from <a href="https://manipal.edu/mit.html">Manipal Institute of Technology, India</a>.  
               </p>
               <p>
