--- a/index.html
+++ b/index.html
@@ -64,7 +64,39 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-        
+          
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/preprint.png" alt="acl23" height="160">
+            </td>
+            <td width="75%" valign="middle"><a href="https://arxiv.org/pdf/2410.17891">
+                <papertitle>Scaling Diffusion Language Models via Adaptation From Autoregressive Models</papertitle></a>
+              <br><p>
+                Shansan Gong*, <strong>Shivam Agarwal*</strong>, Yizhe Zhang, Jiacheng Ye, Lin Zheng, Mukai Li, Chenxin An, Peilin Zhao, Wei Bi, Jiawei Han, Hao Peng, Lingpeng Kong
+              <br>
+              <!-- <em>Proceedings of the ACM on Web Conference 2024</em> (WWW 2024) -->
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/www24.png" alt="acl23" height="160">
+            </td>
+            <td width="75%" valign="middle"><a href="https://dl.acm.org/doi/pdf/10.1145/3589334.3645512">
+                <papertitle>Improving Retrieval in Theme-specific Applications using a Corpus Topical Taxonomy</papertitle></a>
+              <br><p>
+                SeongKu Kang, <strong>Shivam Agarwal</strong>, Bowen Jin, Dongha Lee, Hwanjo Yu, Jiawei Han
+              <br>
+              <em>Proceedings of the ACM on Web Conference 2024</em> (WWW 2024)
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/acl23_2.png" alt="acl23" height="160">
