--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <br><p>
                 Shansan Gong*, <strong>Shivam Agarwal*</strong>, Yizhe Zhang, Jiacheng Ye, Lin Zheng, Mukai Li, Chenxin An, Peilin Zhao, Wei Bi, Jiawei Han, Hao Peng, Lingpeng Kong
               <br>
-              <!-- <em>Proceedings of the ACM on Web Conference 2024</em> (WWW 2024) -->
+              <em>International Conference on Learning Representations</em> (ICLR 2025)
               <br>
               <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
             </p>
