--- a/index.html
+++ b/index.html
@@ -67,6 +67,24 @@
           
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/cow.jpg" alt="" height="160">
+            </td>
+            <td width="75%" valign="middle"><a href="https://www.arxiv.org/pdf/2505.15134">
+                <papertitle>The Unreasonable Effectiveness of Entropy Minimization in LLM Reasoning</papertitle></a>
+              <br><p>
+                <strong>Shivam Agarwal</strong>, Zimin Zhang, Lifan Yuan, Jiawei Han, Hao Peng
+              <br>
+              
+              <br>
+              <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
+            </p>
+            </td>
+          </tr>
+
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/preprint.png" alt="acl23" height="160">
             </td>
             <td width="75%" valign="middle"><a href="https://arxiv.org/pdf/2410.17891">
