--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
-              <img src="images/cow.jpg" alt="" height="160">
+              <img src="images/cow.png" alt="" height="160">
             </td>
             <td width="75%" valign="middle"><a href="https://www.arxiv.org/pdf/2505.15134">
                 <papertitle>The Unreasonable Effectiveness of Entropy Minimization in LLM Reasoning</papertitle></a>
