--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <br><p>
               <strong>Shivam Agarwal</strong>, Ritesh Soun, Rahul Shivani, Vishnu Varanasi, Navroop Gill, Ramit Sawhney
               <br>
-              <em>2023 IEEE International Conference on Acoustics, Speech, and Signal Processing</em> (ICASSP 2023)
+              <em>2023 IEEE International Conference on Acoustics, Speech, and Signal Processing</em> (ICASSP 2023) (Top 3% award)
               <br>
               <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
             </p>
