--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <br><p>
                 <strong>Shivam Agarwal</strong>, Zimin Zhang, Lifan Yuan, Jiawei Han, Hao Peng
               <br>
-              
+              <em>The Thirty-Ninth Annual Conference on Neural Information Processing Systems</em> (NeurIPS 2025)
               <br>
               <!-- <a href="https://docs.google.com/presentation/d/1y1MVT7hZGORfRHhzZA6CfMNcUSVFyxyqy0Hoemoh8XI/edit#slide=id.p">[Slide]</a> -->
             </p>
